# CRON-AE-Automation

./: .gitignore  README.md  pyproject.toml
job/: insert.py  refresh_entry.py  update.py
scripts/: run_executor.sh  run_mounter.sh  setup.sh
services/: ftp.py  monitor.py
services/postgre/: connection.py  model.py
src/: monitor.py  secret.py
utils/: helper.py  query.py
